external-crates/move/crates/move-compiler/tests/development/typing/signed_int_inferred_through_variable_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E04021]: invalid number after type inference
   ┌─ tests/development/typing/signed_int_inferred_through_variable_invalid.move:13:22
   │
13 │         let _x: i8 = 128;
   │                 --   ^^^
   │                 │    │
   │                 │    Invalid numerical literal
   │                 │    Annotating the literal might help inference: '128i16'
   │                 This literal does not fit into the type 'i8'.

error[E04021]: invalid number after type inference
   ┌─ tests/development/typing/signed_int_inferred_through_variable_invalid.move:18:22
   │
17 │         let x: i16 = 0;
   │                --- This literal does not fit into the type 'i16'.
18 │         let _y = x + 32768;
   │                      ^^^^^
   │                      │
   │                      Invalid numerical literal
   │                      Annotating the literal might help inference: '32768i32'

error[E04021]: invalid number after type inference
   ┌─ tests/development/typing/signed_int_inferred_through_variable_invalid.move:22:9
   │
21 │     fun signed_overflow_through_return_i32(): i32 {
   │                                               --- This literal does not fit into the type 'i32'.
22 │         2147483648
   │         ^^^^^^^^^^
   │         │
   │         Invalid numerical literal
   │         Annotating the literal might help inference: '2147483648i64'

error[E04021]: invalid number after type inference
   ┌─ tests/development/typing/signed_int_inferred_through_variable_invalid.move:27:22
   │
26 │         let a: i64 = 0;
   │                --- This literal does not fit into the type 'i64'.
27 │         let _b = a + 9223372036854775808;
   │                      ^^^^^^^^^^^^^^^^^^^
   │                      │
   │                      Invalid numerical literal
   │                      Annotating the literal might help inference: '9223372036854775808i128'

error[E04021]: invalid number after type inference
   ┌─ tests/development/typing/signed_int_inferred_through_variable_invalid.move:35:22
   │
34 │         let x: u8 = 0;
   │                -- This literal does not fit into the type 'u8'.
35 │         let _y = x + 256;
   │                      ^^^
   │                      │
   │                      Invalid numerical literal
   │                      Annotating the literal might help inference: '256u16'

error[E04021]: invalid number after type inference
   ┌─ tests/development/typing/signed_int_inferred_through_variable_invalid.move:40:22
   │
39 │         let x: u16 = 0;
   │                --- This literal does not fit into the type 'u16'.
40 │         let _y = x + 65536;
   │                      ^^^^^
   │                      │
   │                      Invalid numerical literal
   │                      Annotating the literal might help inference: '65536u32'
